responsive for header section done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </nav>
     </div>
 
-    <div class="header-content flex space-y-16 lg:space-y-0 justify-between items-center pl-4 pr-4 lg:pr-48 mt-20">
+    <div
+      class="header-content flex flex-col md:flex-row space-y-16 lg:space-y-0 justify-between items-center pl-4 pr-4 lg:pr-48 mt-20">
       <div class="header-text ">
         <h1 class="text-6xl font-bebas uppercase font-medium w-80 lg:w-2/3 mb-7 leading-normal"><span
             class="text-6xl font-bebas uppercase font-medium text-yellow-400">Be the Penguins</span>
