--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 </head>
 
 <body>
-  <header class="header-section px-3 lg:px-32 bg-amber-50 py-8">
+  <!-- header container -->
+  <header class="header-section px-4 lg:px-44 bg-amber-50 py-8">
+    <!-- menu section -->
     <div class="menu flex flex-col md:flex-row space-y-7 md:space-y-0 lg:space-y-0 justify-between">
+      <!-- logo section -->
       <div class="logo">
         <img class="w-64" src="icons/logo.png" alt="">
       </div>
@@ -38,7 +41,7 @@
         </ul>
       </nav>
     </div>
-
+    <!-- navigation menu -->
     <div
       class="header-content flex flex-col md:flex-row space-y-16 lg:space-y-0 justify-between items-center pl-4 pr-4 lg:pr-48 mt-20">
       <div class="header-text ">
@@ -62,6 +65,160 @@
       </div>
     </div>
   </header>
+
+  <!-- main section -->
+  <main class="max-w-screen-2xl mx-auto">
+    <!-- Women Product section -->
+    <section class="my-16">
+      <h1 class="text-5xl capitalize font-bebas font-medium text-slate-500 text-center md:text-left lg:text-left">women
+        jacket</h1>
+      <!-- card container -->
+      <div class="mt-7 grid  grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 w-3/4 md:w-full lg:w-full mx-auto ">
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img class="" src="images/jacket-1.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">yellow coat jacket</h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img src="images/jacket-2.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">Ladies Jacket </h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img src="images/jacket-3.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">Woman Leather Jacket </h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Man Product section -->
+    <section class="my-16">
+      <h1 class="text-5xl capitalize font-bebas font-medium text-slate-500 text-center md:text-left lg:text-left ">man
+        jacket</h1>
+      <!-- card container -->
+      <div class="mt-7 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 w-3/4 md:w-full lg:w-full mx-auto">
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img src="images/jacket-4.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">Snowboard Jacket Mens</h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img src="images/jacket-5.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">Man Leather Jackets</h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+
+        <!-- single card -->
+        <div class="space-y-4">
+          <div class="p-5 bg-[#F1F1F1;] rounded-2xl">
+            <img src="images/jacket-6.png" alt="">
+          </div>
+          <h4 class="capitalize font-roboto font-bold text-gray-900 text-2xl">Man Casual Jackets</h4>
+          <p class="text-[#3E3E3E]; font-roboto">Lorem Ipsum is simply dummy text of the
+            printing and typesetting industry.</p>
+          <div class="flex justify-between items-center">
+            <h2 class="font-roboto font-black text-4xl text-[#FABE4C]">$234</h2>
+            <button
+              class="text-base w-44 h-14 py-4 px-8 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg uppercase font-medium">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 inline">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+              </svg>
+              Buy
+              Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
