website completed with responsive

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <!-- Man Product section -->
     <section class="my-16">
-      <h1 class="text-5xl capitalize font-bebas font-medium text-slate-500 text-center md:text-left lg:text-left ">man
+      <h1 class="text-5xl capitalize font-bebas font-medium text-red-500 text-center md:text-left lg:text-left ">man
         jacket</h1>
       <!-- card container -->
       <div class="mt-7 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 w-3/4 md:w-full lg:w-full mx-auto">
@@ -216,6 +216,46 @@
               Now</button>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- service section -->
+    <section class="flex flex-col md:flex-row lg:flex-row row justify-between items-center my-28 border-slate-950">
+
+      <!-- service-text container -->
+      <div class="flex flex-col gap-10">
+        <!-- service text -->
+        <div class="flex items-center gap-x-10 font-roboto shadow-md rounded-lg p-4 mb-10">
+          <img class="h-20 w-20" src="icons/house.png" alt="">
+          <div class="">
+            <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+            <p class="text-base font-normal mt-4">Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <!-- service text -->
+        <div class="flex items-center gap-x-10 font-roboto shadow-md rounded-lg p-4">
+          <img class="h-20 w-20" src="icons/box.png" alt="">
+          <div class="">
+            <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+            <p class="text-base font-normal mt-4">Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <!-- service text -->
+        <div class="flex items-center gap-x-10 font-roboto shadow-md rounded-lg p-4 mt-10">
+          <img class="h-20 w-20" src="icons/question.png" alt="">
+          <div class="">
+            <h4 class="text-2xl font-bold">Find the Perfect Fit</h4>
+            <p class="text-base font-normal mt-4">Everybody is different, which is why we
+              offer styles for every body.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- service image -->
+      <div class="w-1/2 mt-20 md:mt-0 lg:mt-0">
+        <img class="w-full md:w-3/2 lg:w-3/2" src="images/shopping.png" alt="">
       </div>
     </section>
   </main>
